Add nav, card and input feature

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,31 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header>
+      <nav>
+        <div class="nav-logo">
+          <img src="../imgs/s-sharon.png" alt="logo" >
+        </div>
+        <div class="nav-name-section">
+          <p>VALIDACIÓN DE TARJETA</p>
+          <div class="linea"></div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <p>Ingresa los datos de tu tarjeta</p>
+        <div>
+          <img src="../imgs/card-sindatos.png" alt="card">
+        </div>
+        <div>
+          <input class="cardInput" type="number" size="4" maxlength="4" placeholder="0000">
+          <input class="cardInput" type="number" size="4" maxlength="4" placeholder="0000">
+          <input class="cardInput" type="number" size="4" maxlength="4"  placeholder="0000">
+          <input class="cardInput" type="number" size="4" maxlength="4" placeholder="0000">
+        </div>
+      </section>
+    </main>
     <footer></footer>
     <script src="index.js" type="module"></script>
   </body>
