Add hide and unhide card numbers feature

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
           </div>
         </div>
         <div class="digits-state">
-          <p>Ocultar dígitos</p>
+          <button class="hideNumbersButton">Ocultar dígitos</button>
         </div>
         <div class="validate-card">
           <button>Validar</button>
