Add card numbers to an array as int

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
           <button class="hideNumbersButton">Ocultar dígitos</button>
         </div>
         <div class="validate-card">
-          <button>Validar</button>
+          <button class="validate-card-button">Validar</button>
         </div>
       </section>
     </main>
