Add validation feature and validation message styles

--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,23 @@
           <button class="validate-card-button">Validar</button>
         </div>
       </section>
+      <section class="validation-message">
+        <div class="validation-message-left">
+          <div class="icon">
+            <img src="./imgs/check-mark.png" alt="check icon">
+          </div>
+          <div class="message">
+            <span>¡Felicidades! Tu tarjeta es valida</span>
+          </div>
+        </div>
+        <div class="validation-message-right">
+          <div class="option-buttons">
+            <buton class="validate-new-card">Validar otra tarjeta</buton>
+            <buton class="exit">Salir</buton>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
     <script src="index.js" type="module"></script>
   </body>
 </html>
