--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <div class="nav-logo">
-          <img src="../imgs/s-sharon.png" alt="logo" >
+          <img src="/imgs/s-sharon.png" alt="logo" >
         </div>
         <div class="nav-name-section">
           <p>VALIDACIÓN DE TARJETA</p>
