--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <div class="nav-logo">
-          <img src="/imgs/s-sharon.png" alt="logo" >
+          <img src="imgs/s-sharon.png" alt="logo" >
         </div>
         <div class="nav-name-section">
           <p>VALIDACIÓN DE TARJETA</p>
@@ -23,7 +23,7 @@
         <p>Ingresa los datos de tu tarjeta</p>
         <div class="data-card">
           <div class="card">
-            <img src="../imgs/card-sindatos.png" alt="card">
+            <img src="imgs/card-sindatos.png" alt="card">
           </div>
           <div class="numbers">
             <input class="cardInput" type="number" size="4" maxlength="4" placeholder="0000">
@@ -45,7 +45,7 @@
       <section class="validation-message display-off">
         <div class="validation-message-left">
           <div class="icon">
-            <img src="./imgs/check-mark.png" alt="check icon">
+            <img src="imgs/check-mark.png" alt="check icon">
           </div>
           <div class="message">
             <span>¡Felicidades! Tu tarjeta es valida</span>
