add name validation feature, placeholder styles and change on hide and show card numbers feature

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
             <input class="cardInput" type="number" size="4" maxlength="4" placeholder="0000">
           </div>
           <div class="user-name">
-            <input type="text" placeholder="Your name here">
+            <input class="user-name-input" type="text" placeholder="nombre">
           </div>
         </div>
         <div class="digits-state">
