validation name feature and hint animation

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <p>Ingresa los datos de tu tarjeta</p>
         <div class="data-card">
           <div class="card">
-            <img src="imgs/card-sindatos.png" alt="card">
+            <img class="card-image" src="imgs/card-sindatos.png" alt="card">
           </div>
           <div class="numbers">
             <input class="cardInput" type="number" size="4" maxlength="4" placeholder="0000">
@@ -33,6 +33,7 @@
           </div>
           <div class="user-name">
             <input class="user-name-input" type="text" placeholder="nombre">
+            <span class="user-name-span display-off">Por favor, ingresa tu nombre</span>
           </div>
         </div>
         <div class="digits-state">
