--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
             <input class="cardInput" type="number" size="4" maxlength="4"  placeholder="0000">
             <input class="cardInput" type="number" size="4" maxlength="4" placeholder="0000">
           </div>
+          <span class="card-numbers-span display-off">Por favor, ingresa los 16 números de tu tarjeta</span>
           <div class="user-name">
             <input class="user-name-input" type="text" placeholder="nombre">
             <span class="user-name-span display-off">Por favor, ingresa tu nombre</span>
