--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>Ingresa los datos de tu tarjeta</p>
         <div class="data-card">
           <div class="card">
-            <img src="imgs/card-sindatos.png" alt="card">
+            <img class="card-image" src="imgs/card-sindatos.png" alt="card">
           </div>
           <div class="numbers">
             <input class="cardInput" type="number" size="4" maxlength="4" placeholder="0000">
@@ -31,8 +31,10 @@
             <input class="cardInput" type="number" size="4" maxlength="4"  placeholder="0000">
             <input class="cardInput" type="number" size="4" maxlength="4" placeholder="0000">
           </div>
+          <span class="card-numbers-span display-off">Por favor, ingresa los 16 números de tu tarjeta</span>
           <div class="user-name">
-            <input type="text" placeholder="Your name here">
+            <input class="user-name-input" type="text" placeholder="nombre">
+            <span class="user-name-span display-off">Por favor, ingresa tu nombre</span>
           </div>
         </div>
         <div class="digits-state">
@@ -45,10 +47,10 @@
       <section class="validation-message display-off">
         <div class="validation-message-left">
           <div class="icon">
-            <img src="imgs/check-mark.png" alt="check icon">
+            <img class="icon-img" src="imgs/check-mark.png" alt="check icon">
           </div>
           <div class="message">
-            <span>¡Felicidades! Tu tarjeta es valida</span>
+            <span class="message-span">¡Felicidades! Tu tarjeta es valida</span>
           </div>
         </div>
         <div class="validation-message-right">
