--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Document</title>
+        <title>Shank: 404</title>
         <link rel="icon" href="./imgs/s-sharon.png">
         <link rel="stylesheet" href="style.css" />
     </head>
@@ -13,13 +13,19 @@
                 <img src="../imgs/s-sharon.png" alt="logo" >
             </div>
             <div class="nav-name-section">
-                <p>VALIDACIÓN DE TARJETA</p>
+                <p>!404</p>
                 <div class="linea"></div>
             </div>
             </nav>
         </header>
         <main>
-            <img src="https://i.pinimg.com/originals/94/37/52/9437525d68df5b9a753026bcafe7edde.gif" />
+            <div class="main-img">
+                <img src="https://i.pinimg.com/originals/94/37/52/9437525d68df5b9a753026bcafe7edde.gif" />
+            </div>
+            <div class="main-message">
+                <h1>¡Lo sentimos!</h1>
+                <h2>Por el momento tu solicitud no puede ser procesada</h2>
+            </div>
         </main>
 
     </body>
